# stacks

./: Cargo.toml  DESIGN.md  PATTERNS.md  README.md  mise.toml  release.toml
.github/workflows/: ci.yml  release.yml
src/: embed.rs  error.rs  format.rs  index.rs  main.rs  prime.md  store.rs
