[package]
name = "stacks"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "stacks"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
model2vec-rs = "0.1"
pulldown-cmark = { version = "0.13", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0.149"
sha2 = "0.10"
sqlite-vec = "0.0.1-alpha.7"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
